fix Java warnings